Fix text overlaps in top banner in performance analyser

--- a/low-code-diagram/src/Components/RenderingComponents/Function/perBar/style.scss
+++ b/low-code-diagram/src/Components/RenderingComponents/Function/perBar/style.scss
@@ -37,7 +37,7 @@
         z-index: 2;
         padding: 4px 8px;
         margin: 0;
-        max-width: 75%;
+        max-width: calc(100% - 210px);
     }
 
     .more {
